--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="2">*El IVA no está incluido en las ventas</td>
+                    <td colspan="3" class="foot">*El IVA no está incluido en las ventas</td>
                 </tr>
             </tfoot>
         </table>
